clusters/dagda/apps/forgejo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - forgejo.aiectomy.xyz
  rules:
    - backendRefs:
        - name: forgejo
          port: 3000
